Add Java Profile Presets
Now the presets actually work 100% of the time :P
- Allows you to one-click install the best args Java can provide